# real-human-bean

./: .clang-format  .gitignore  CMakeLists.txt  README.md  editor.cpp  editor.hpp  processor.cpp  processor.hpp  upload_vst.yml  vcpkg.json
.github/workflows/: release.yml
lib/: config.hpp  controls.cpp  controls.hpp  engine.cpp  engine.hpp  event.hpp  graphics.cpp  graphics.hpp  log.cpp  log.hpp  mouse.cpp  mouse.hpp  noise.cpp  noise.hpp  quad.cpp  quad.hpp  serialize.cpp  serialize.hpp  texture.cpp  texture.hpp  ui.cpp  ui.hpp
lib/widget/: button.cpp  button.hpp  knob.cpp  knob.hpp
resources/shader/: circle-shader.frag  graph-shader.frag  noise-shader.frag  shader.frag  shader.vert
test/: CMakeLists.txt  main.cpp
